--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@djs-modules/notifier",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "\"@djs-modules/notifier\" is a module that allows you to create a Twitch Notification System in your Discord bot.",
   "main": "dist/index.js",
   "types": "typings/Manager.d.ts",
@@ -29,14 +29,16 @@
     "node": ">=14"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.5",
-    "@babel/plugin-proposal-class-properties": "^7.17.12",
-    "@babel/plugin-proposal-object-rest-spread": "^7.18.0",
-    "@babel/preset-env": "^7.18.2",
-    "@babel/preset-typescript": "^7.17.12",
+    "@babel/core": "^7.18.6",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-object-rest-spread": "^7.18.6",
+    "@babel/preset-env": "^7.18.6",
+    "@babel/preset-typescript": "^7.18.6",
     "@distube/docgen": "distubejs/docgen",
     "@types/cron": "^2.0.0",
+    "@types/semver": "^7.3.10",
     "jsdoc-babel": "^0.5.0",
+    "semver": "^7.3.7",
     "typescript": "^4.7.4"
   }
 }
